1. MyTimeAutomation - Coding Start

--- a/MyTime/Views/Shared/_Layout.cshtml
+++ b/MyTime/Views/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
                                     <i class="fa fa-wrench pr-1" style="font-size:20px; width:25px;"></i> @MyTime.Resource.SystemSetting
                                 </div>
                             </a>
-                            <ul class="collapse lisst-unstyled" id="settingSubmenu">
+                            <ul class="collapse list-unstyled" id="settingSubmenu">
 
                                 <li>
                                     <a href="#" id="linkSystem">
@@ -135,7 +135,7 @@
                                     <i class="fa fa-tablet pr-1" style="font-size:20px; width:25px;"></i> @MyTime.Resource.Device
                                 </div>
                             </a>
-                            <ul class="collapse lisst-unstyled" id="deviceSubmenu">
+                            <ul class="collapse list-unstyled" id="deviceSubmenu">
 
                                 <li>
                                     <a href="#" id="linkAccessRole">
@@ -153,7 +153,7 @@
                                     <i class="fa fa-sitemap pr-1" style="font-size:20px; width:25px;"></i> @MyTime.Resource.Organisation
                                 </div>
                             </a>
-                            <ul class="collapse lisst-unstyled" id="organisationSubmenu">
+                            <ul class="collapse list-unstyled" id="organisationSubmenu">
 
                                 <li>
                                     <a href="#" id="linkDepartment">
@@ -175,7 +175,7 @@
                                     <i class="fa fa-users pr-1" style="font-size:20px; width:25px;"></i> @MyTime.Resource.User
                                 </div>
                             </a>
-                            <ul class="collapse lisst-unstyled" id="userSubmenu">
+                            <ul class="collapse list-unstyled" id="userSubmenu">
 
                                 <li>
                                     <a href="#" id="linkUser">
@@ -205,7 +205,7 @@
                                     <i class="fa fa-calendar-o pr-1" style="font-size:20px; width:25px;"></i> @MyTime.Resource.ShiftSchedule
                                 </div>
                             </a>
-                            <ul class="collapse lisst-unstyled" id="shiftscheduleSubmenu">
+                            <ul class="collapse list-unstyled" id="shiftscheduleSubmenu">
 
                                 <li>
                                     <a href="#" id="linkHoliday">
@@ -236,7 +236,7 @@
                                     <i class="fa fa-file-text-o pr-1" style="font-size:20px; width:25px;"></i> @MyTime.Resource.Report
                                 </div>
                             </a>
-                            <ul class="collapse lisst-unstyled" id="reportSubmenu">
+                            <ul class="collapse list-unstyled" id="reportSubmenu">
 
                                 <li>
                                     <a href="#" id="linkDailyAttendanceRecord">
