Rectified the UserAccessControl bug. And the colour card new requirement on progress. Version 1.0.6 Built 220309

--- a/MyTime/Views/UserAccessControl/Index.cshtml
+++ b/MyTime/Views/UserAccessControl/Index.cshtml
@@ -250,7 +250,7 @@
                                     $(".SystemSetting").prop("checked", json.IsAllowedSystemSetting);
                                     $(".Device").prop("checked", json.IsAllowedDevice);
                                     $(".Organisation").prop("checked", json.IsAllowedOrganisation);
-                                    $(".User").prop("checked", json.IsAllowedSystemUser);
+                                    $(".User").prop("checked", json.IsAllowedUser);
                                     $(".ShiftSchedule").prop("checked", json.IsAllowedShiftSchedule);
                                     $(".ApproveReason").prop("checked", json.IsAllowedApproveReason);
                                     $(".PrintReport").prop("checked", json.IsAllowedPrintReport);
