--- a/MyTime/Views/Home/Index.cshtml
+++ b/MyTime/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="col-md-6">
             <nav class="bg-transparent" aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item active" aria-current="page">@MyTime.Resource.Home</li>
+                    <li class="breadcrumb-item active" aria-current="page">@MyTime.Resource.Home 1</li>
                 </ol>
             </nav>
         </div>
