MyTime-KBS - Version 1.0.0 - 220425 : Modification in progress

--- a/MyTime/Assets/style.css
+++ b/MyTime/Assets/style.css
@@ -184,7 +184,8 @@ a.icon-uk {
     #sidebar .sidebar-header {
         padding: 20px;
         /*background: #1b1d24;*/
-        background: #02225b;
+        /*background: #02225b;*/
+        background: #04699a;
         /*height: 60px;*/
     }
 
