--- a/MyTime/Views/Attendance/Index.cshtml
+++ b/MyTime/Views/Attendance/Index.cshtml
@@ -566,6 +566,9 @@
 
 
                                 if (proof != '') {
+
+                                    proof = proof + "?var=" + Date.now();
+
                                     return "<a href='" + folder + proof + "' target='_blank'> <i class='icofont-attachment' style='color: black; font-size: 20px;' data-toggle='tooltip' data-placement='top' title='@MyTime.Resource.Attachment'></i> </a>";
                                 }
                                 else {
