--- a/MyTime/Views/Shared/_Layout.cshtml
+++ b/MyTime/Views/Shared/_Layout.cshtml
@@ -31,8 +31,8 @@
 
                     <div class="row">
                         <div class="col-md-12 text-center">
-                            @*<img src=@String.Format("../Images/{0}", Session["OrganisationLogo"]) width="60" height="50" />*@
-                            <img src=@String.Format("../Images/{0}", "Kementerian.png") width="50" height="40" />
+                            @*<img src=@String.Format("../Images/{0}", Session["OrganisationLogo"]) width="40" height="40" />*@
+                            <img src=@String.Format("../Images/{0}", "KBS.png") width="38" height="38" />
                         </div>
                     </div>
 
