--- a/MyTime/Views/Attendance/Index.cshtml
+++ b/MyTime/Views/Attendance/Index.cshtml
@@ -806,14 +806,15 @@
                             break;
                     }*@
 
+                                      
                      switch (data['AttendanceCardStatus']) {
-                        case '@MyTime.Resource.Colour_Yellow':
+                        case  'YL':
                              $('#divAttendanceCardStatus').css({ "background-color": "gold" });
                             break;
-                        case '@MyTime.Resource.Colour_Green':
+                        case  'GN':
                              $('#divAttendanceCardStatus').css({ "background-color": "green" });
                             break;
-                        case '@MyTime.Resource.Colour_Red':
+                        case  'RD':
                              $('#divAttendanceCardStatus').css({ "background-color": "red" });
                             break;
                         default:
