--- a/MyTime/Views/User/Index.cshtml
+++ b/MyTime/Views/User/Index.cshtml
@@ -240,13 +240,22 @@
                     {
                         "render": function (data, type, row) {
 
-                            switch (row.AttendanceCardStatus) {
+                            @*switch (row.AttendanceCardStatus) {
                                 case 'YL':
                                     return "<a href='#'  onclick='ListAttendanceCardProcess(" + '"' + row.NRIC + '","' + row.UserName + '"' + ");'> <i class='icofont-address-book pr-1' style='color: gold ; font-size:18px;' data-toggle='tooltip' data-placement='top' title='@MyTime.Resource.AttendanceCard'></i>@MyTime.Resource.Colour_Yellow  </a>";
                                 case 'GN':
                                     return "<a href='#'  onclick='ListAttendanceCardProcess(" + '"' + row.NRIC + '","' + row.UserName + '"' + ");'> <i class='icofont-address-book pr-1' style='color: green ; font-size:18px;' data-toggle='tooltip' data-placement='top' title='@MyTime.Resource.AttendanceCard'></i>@MyTime.Resource.Colour_Green</a>";
                                 case 'RD':
                                     return "<a href='#'  onclick='ListAttendanceCardProcess(" + '"' + row.NRIC + '","' + row.UserName + '"' + ");'> <i class='icofont-address-book pr-1' style='color: red ; font-size:18px;' data-toggle='tooltip' data-placement='top' title='@MyTime.Resource.AttendanceCard'></i>@MyTime.Resource.Colour_Red  </a>";
+                            }*@
+
+                            switch (row.AttendanceCardStatus) {
+                                case 'YL':
+                                    return "<i class='icofont-address-book pr-1' style='color: gold ; font-size:18px;' data-toggle='tooltip' data-placement='top' title='@MyTime.Resource.AttendanceCard'></i>@MyTime.Resource.Colour_Yellow ";
+                                case 'GN':
+                                    return "<i class='icofont-address-book pr-1' style='color: green ; font-size:18px;' data-toggle='tooltip' data-placement='top' title='@MyTime.Resource.AttendanceCard'></i>@MyTime.Resource.Colour_Green";
+                                case 'RD':
+                                    return "<i class='icofont-address-book pr-1' style='color: red ; font-size:18px;' data-toggle='tooltip' data-placement='top' title='@MyTime.Resource.AttendanceCard'></i>@MyTime.Resource.Colour_Red";
                             }
                         }
                     },
