--- a/MyTime/Views/Attendance/Index.cshtml
+++ b/MyTime/Views/Attendance/Index.cshtml
@@ -886,13 +886,13 @@
         var Lateness = selectedRow.Lateness;
         var LastOut = selectedRow.LastOut;
         var WorkTime = selectedRow.WorkTime;
-        var OvertimeStart = selectedRow.OvertimeStart;
-        var OvertimeEnd = selectedRow.OvertimeEnd;
+        //var OvertimeStart = selectedRow.OvertimeStart;
+        //var OvertimeEnd = selectedRow.OvertimeEnd;
         var Overtime = selectedRow.Overtime;
         var OvertimeExtraStart = selectedRow.OvertimeExtraStart;
         var OvertimeExtraEnd = selectedRow.OvertimeExtraEnd;
         var OvertimeExtra = selectedRow.OvertimeExtra;
-        var TotalOvertime = selectedRow.TotalOvertime;
+        //var TotalOvertime = selectedRow.TotalOvertime;
         var ReasonID = selectedRow.ReasonID;
         var ReasonName = selectedRow.ReasonName;
         var Remark = selectedRow.Remark;
@@ -908,13 +908,13 @@
         rowData += '#' + Lateness;
         rowData += '#' + LastOut;
         rowData += '#' + WorkTime;
-        rowData += '#' + OvertimeStart;
-        rowData += '#' + OvertimeEnd;
+        //rowData += '#' + OvertimeStart;
+        //rowData += '#' + OvertimeEnd;
         rowData += '#' + Overtime;
         rowData += '#' + OvertimeExtraStart;
         rowData += '#' + OvertimeExtraEnd;
         rowData += '#' + OvertimeExtra;
-        rowData += '#' + TotalOvertime;
+        //rowData += '#' + TotalOvertime;
         rowData += '#' + ReasonID;
         rowData += '#' + ReasonName;
         rowData += '#' + Remark;
