--- a/MyTime/Views/Attendance/_SubmitReason.cshtml
+++ b/MyTime/Views/Attendance/_SubmitReason.cshtml
@@ -35,6 +35,11 @@
                     @Html.HiddenFor(model => model.AttendanceReasonModel.Lateness)
                     @Html.HiddenFor(model => model.AttendanceReasonModel.ReasonName)
 
+                    
+                    @Html.HiddenFor(model => model.AttendanceReasonModel.OvertimeExtraStart)
+                    @Html.HiddenFor(model => model.AttendanceReasonModel.OvertimeExtraEnd)
+                    @Html.HiddenFor(model => model.AttendanceReasonModel.OvertimeExtra)
+
                     <div class="form-horizontal">
 
                         @*@Html.ValidationSummary(true, "", new { @class = "text-danger" })*@
@@ -97,43 +102,45 @@
 
                         <hr />
 
-                        <div class="form-group row text-center">
-                            <div class="col-md-12">
-                                @MyTime.Resource.WorkOvertime
-                            </div>
-                        </div>
 
-                        <div class="form-group row">
-                            <div class="col-md-3">
-                                @Html.LabelFor(model => model.AttendanceReasonModel.OvertimeExtraStart, htmlAttributes: new { @class = "control-label" })
-                            </div>
+                        @*<div class="form-group row text-center ">
+                    <div class="col-md-12">
+                        @MyTime.Resource.WorkOvertime
+                    </div>
+                </div>
 
-                            <div class="col-md-3">
-                                @Html.EditorFor(model => model.AttendanceReasonModel.OvertimeExtraStart, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                            </div>
-                            <div class="col-md-3">
-                                @Html.LabelFor(model => model.AttendanceReasonModel.OvertimeExtraEnd, htmlAttributes: new { @class = "control-label" })
-                            </div>
-                            <div class="col-md-3">
-                                @Html.EditorFor(model => model.AttendanceReasonModel.OvertimeExtraEnd, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                            </div>
-                        </div>
+                <div class="form-group row">
+                    <div class="col-md-3">
+                        @Html.LabelFor(model => model.AttendanceReasonModel.OvertimeExtraStart, htmlAttributes: new { @class = "control-label" })
+                    </div>
 
-                        <div class="form-group row">
-                            <div class="col-md-3">
-                            </div>
+                    <div class="col-md-3">
+                        @Html.EditorFor(model => model.AttendanceReasonModel.OvertimeExtraStart, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                    </div>
+                    <div class="col-md-3">
+                        @Html.LabelFor(model => model.AttendanceReasonModel.OvertimeExtraEnd, htmlAttributes: new { @class = "control-label" })
+                    </div>
+                    <div class="col-md-3">
+                        @Html.EditorFor(model => model.AttendanceReasonModel.OvertimeExtraEnd, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                    </div>
+                </div>
 
-                            <div class="col-md-3">
-                             </div>
-                            <div class="col-md-3">
-                                @Html.LabelFor(model => model.AttendanceReasonModel.OvertimeExtra, htmlAttributes: new { @class = "control-label" })
-                            </div>
-                            <div class="col-md-3">
-                                @Html.EditorFor(model => model.AttendanceReasonModel.OvertimeExtra, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                            </div>
-                        </div>
+                <div class="form-group row">
+                    <div class="col-md-3">
+                    </div>
 
-                        <hr />
+                    <div class="col-md-3">
+                     </div>
+                    <div class="col-md-3">
+                        @Html.LabelFor(model => model.AttendanceReasonModel.OvertimeExtra, htmlAttributes: new { @class = "control-label" })
+                    </div>
+                    <div class="col-md-3">
+                        @Html.EditorFor(model => model.AttendanceReasonModel.OvertimeExtra, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                    </div>
+                </div>
+
+                <hr />*@
+
 
 
 
