--- a/MyTime/Views/ReasonApproval/_RequestToAmendReason.cshtml
+++ b/MyTime/Views/ReasonApproval/_RequestToAmendReason.cshtml
@@ -31,163 +31,168 @@
 
 
                     @Html.HiddenFor(model => model.ReasonApprovalModel.AttendanceStatusID)
-                    @Html.HiddenFor(model => model.ReasonApprovalModel.Lateness)                 
+                    @Html.HiddenFor(model => model.ReasonApprovalModel.Lateness)
                     @Html.HiddenFor(model => model.ReasonApprovalModel.ReasonID)
 
-                <div class="form-horizontal">
 
-                    @*@Html.ValidationSummary(true, "", new { @class = "text-danger" })*@
+                    @Html.HiddenFor(model => model.ReasonApprovalModel.OvertimeExtraStart)
+                    @Html.HiddenFor(model => model.ReasonApprovalModel.OvertimeExtraEnd)
+                    @Html.HiddenFor(model => model.ReasonApprovalModel.OvertimeExtra)
 
-                    <div class="form-group row">
-                        <div class="col-md-3">
-                            @Html.LabelFor(model => model.ReasonApprovalModel.AttendanceDate, htmlAttributes: new { @class = "control-label" })
+                    <div class="form-horizontal">
+
+                        @*@Html.ValidationSummary(true, "", new { @class = "text-danger" })*@
+
+                        <div class="form-group row">
+                            <div class="col-md-3">
+                                @Html.LabelFor(model => model.ReasonApprovalModel.AttendanceDate, htmlAttributes: new { @class = "control-label" })
+                            </div>
+                            <div class="col-md-3">
+                                @Html.EditorFor(model => model.ReasonApprovalModel.AttendanceDate, new { htmlAttributes = new { @class = "form-control", @Value = Model.ReasonApprovalModel.AttendanceDate.ToString("dd/MM/yyyy"), @readonly = "readonly" } })
+                            </div>
+                            <div class="col-md-3">
+                                @Html.LabelFor(model => model.ReasonApprovalModel.AttendanceDay, htmlAttributes: new { @class = "control-label" })
+                            </div>
+                            <div class="col-md-3">
+                                @Html.EditorFor(model => model.ReasonApprovalModel.AttendanceDay, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
                         </div>
-                        <div class="col-md-3">
-                            @Html.EditorFor(model => model.ReasonApprovalModel.AttendanceDate, new { htmlAttributes = new { @class = "form-control", @Value = Model.ReasonApprovalModel.AttendanceDate.ToString("dd/MM/yyyy"), @readonly = "readonly" } })
+
+                        <div class="form-group row">
+                            <div class="col-md-3">
+                                @Html.LabelFor(model => model.ReasonApprovalModel.UserName, htmlAttributes: new { @class = "control-label" })
+                            </div>
+                            <div class="col-md-9">
+                                @Html.EditorFor(model => model.ReasonApprovalModel.UserName, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
                         </div>
-                        <div class="col-md-3">
-                            @Html.LabelFor(model => model.ReasonApprovalModel.AttendanceDay, htmlAttributes: new { @class = "control-label" })
+
+                        <div class="form-group row">
+                            <div class="col-md-3">
+                                @Html.LabelFor(model => model.ReasonApprovalModel.NRIC, htmlAttributes: new { @class = "control-label" })
+                            </div>
+                            <div class="col-md-9">
+                                @Html.EditorFor(model => model.ReasonApprovalModel.NRIC, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
                         </div>
-                        <div class="col-md-3">
-                            @Html.EditorFor(model => model.ReasonApprovalModel.AttendanceDay, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+
+                        <div class="form-group row">
+                            <div class="col-md-3">
+                                @Html.LabelFor(model => model.ReasonApprovalModel.AttendanceStatus, htmlAttributes: new { @class = "control-label" })
+                            </div>
+                            <div class="col-md-9">
+                                @Html.EditorFor(model => model.ReasonApprovalModel.AttendanceStatus, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
                         </div>
+
+                        <div class="form-group row">
+                            <div class="col-md-3">
+                                @Html.LabelFor(model => model.ReasonApprovalModel.FirstIn, htmlAttributes: new { @class = "control-label" })
+                            </div>
+
+                            <div class="col-md-3">
+                                @Html.EditorFor(model => model.ReasonApprovalModel.FirstIn, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                            <div class="col-md-3">
+                                @Html.LabelFor(model => model.ReasonApprovalModel.LastOut, htmlAttributes: new { @class = "control-label" })
+                            </div>
+                            <div class="col-md-3">
+                                @Html.EditorFor(model => model.ReasonApprovalModel.LastOut, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <div class="col-md-3">
+                                @Html.LabelFor(model => model.ReasonApprovalModel.WorkTime, htmlAttributes: new { @class = "control-label" })
+                            </div>
+
+                            <div class="col-md-3">
+                                @Html.EditorFor(model => model.ReasonApprovalModel.WorkTime, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                            <div class="col-md-3">
+                                @Html.LabelFor(model => model.ReasonApprovalModel.Overtime, htmlAttributes: new { @class = "control-label" })
+                            </div>
+                            <div class="col-md-3">
+                                @Html.EditorFor(model => model.ReasonApprovalModel.Overtime, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                        </div>
+
+                        <hr />
+
+                        @*<div class="form-group row text-center">
+                            <div class="col-md-12">
+                                @MyTime.Resource.WorkOvertime
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <div class="col-md-3">
+                                @Html.LabelFor(model => model.ReasonApprovalModel.OvertimeExtraStart, htmlAttributes: new { @class = "control-label" })
+                            </div>
+
+                            <div class="col-md-3">
+                                @Html.EditorFor(model => model.ReasonApprovalModel.OvertimeExtraStart, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                            <div class="col-md-3">
+                                @Html.LabelFor(model => model.ReasonApprovalModel.OvertimeExtraEnd, htmlAttributes: new { @class = "control-label" })
+                            </div>
+                            <div class="col-md-3">
+                                @Html.EditorFor(model => model.ReasonApprovalModel.OvertimeExtraEnd, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <div class="col-md-3">
+                                @Html.LabelFor(model => model.ReasonApprovalModel.WorkTime, htmlAttributes: new { @class = "control-label" })
+                            </div>
+
+                            <div class="col-md-3">
+                                @Html.EditorFor(model => model.ReasonApprovalModel.OvertimeExtra, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                            <div class="col-md-3">
+                                @Html.LabelFor(model => model.ReasonApprovalModel.OvertimeExtra, htmlAttributes: new { @class = "control-label" })
+                            </div>
+                            <div class="col-md-3">
+                                @Html.EditorFor(model => model.ReasonApprovalModel.OvertimeExtra, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                        </div>
+
+                        <hr />*@
+
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.ReasonApprovalModel.ReasonName, htmlAttributes: new { @class = "control-label col-md-12" })
+
+                            <div class="col-md-12">
+                                @Html.EditorFor(model => model.ReasonApprovalModel.ReasonName, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.ReasonApprovalModel.Remark, htmlAttributes: new { @class = "control-label col-md-12" })
+
+                            <div class="col-md-12">
+                                @Html.EditorFor(model => model.ReasonApprovalModel.Remark, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                        </div>
+
+                        <hr />
+
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.ReasonApprovalModel.ApproverComment, htmlAttributes: new { @class = "control-label col-md-12 required" })
+
+                            <div class="col-md-12">
+                                @Html.EditorFor(model => model.ReasonApprovalModel.ApproverComment, new { htmlAttributes = new { @class = "form-control", @id = "txtApproverComment" } })
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <div class="col-md-12 text-right">
+                                <input id="btnRequestToAmend" type="submit" value="@MyTime.Resource.RequestToAmend" class="btn btn-primary" />
+                                <input id="btnCancel" type="button" value="@MyTime.Resource.Cancel" class="btn btn-warning" />
+                            </div>
+                        </div>
+
                     </div>
-
-                    <div class="form-group row">
-                        <div class="col-md-3">
-                            @Html.LabelFor(model => model.ReasonApprovalModel.UserName, htmlAttributes: new { @class = "control-label" })
-                        </div>
-                        <div class="col-md-9">
-                            @Html.EditorFor(model => model.ReasonApprovalModel.UserName, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-md-3">
-                            @Html.LabelFor(model => model.ReasonApprovalModel.NRIC, htmlAttributes: new { @class = "control-label" })
-                        </div>
-                        <div class="col-md-9">
-                            @Html.EditorFor(model => model.ReasonApprovalModel.NRIC, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-md-3">
-                            @Html.LabelFor(model => model.ReasonApprovalModel.AttendanceStatus, htmlAttributes: new { @class = "control-label" })
-                        </div>
-                        <div class="col-md-9">
-                            @Html.EditorFor(model => model.ReasonApprovalModel.AttendanceStatus, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-md-3">
-                            @Html.LabelFor(model => model.ReasonApprovalModel.FirstIn, htmlAttributes: new { @class = "control-label" })
-                        </div>
-
-                        <div class="col-md-3">
-                            @Html.EditorFor(model => model.ReasonApprovalModel.FirstIn, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                        </div>
-                        <div class="col-md-3">
-                            @Html.LabelFor(model => model.ReasonApprovalModel.LastOut, htmlAttributes: new { @class = "control-label" })
-                        </div>
-                        <div class="col-md-3">
-                            @Html.EditorFor(model => model.ReasonApprovalModel.LastOut, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-md-3">
-                            @Html.LabelFor(model => model.ReasonApprovalModel.WorkTime, htmlAttributes: new { @class = "control-label" })
-                        </div>
-
-                        <div class="col-md-3">
-                            @Html.EditorFor(model => model.ReasonApprovalModel.WorkTime, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                        </div>
-                        <div class="col-md-3">
-                            @Html.LabelFor(model => model.ReasonApprovalModel.Overtime, htmlAttributes: new { @class = "control-label" })
-                        </div>
-                        <div class="col-md-3">
-                            @Html.EditorFor(model => model.ReasonApprovalModel.Overtime, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                        </div>
-                    </div>
-
-                    <hr />
-
-                    <div class="form-group row text-center">
-                        <div class="col-md-12">
-                            @MyTime.Resource.WorkOvertime
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-md-3">
-                            @Html.LabelFor(model => model.ReasonApprovalModel.OvertimeExtraStart, htmlAttributes: new { @class = "control-label" })
-                        </div>
-
-                        <div class="col-md-3">
-                            @Html.EditorFor(model => model.ReasonApprovalModel.OvertimeExtraStart, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                        </div>
-                        <div class="col-md-3">
-                            @Html.LabelFor(model => model.ReasonApprovalModel.OvertimeExtraEnd, htmlAttributes: new { @class = "control-label" })
-                        </div>
-                        <div class="col-md-3">
-                            @Html.EditorFor(model => model.ReasonApprovalModel.OvertimeExtraEnd, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-md-3">
-                            @Html.LabelFor(model => model.ReasonApprovalModel.WorkTime, htmlAttributes: new { @class = "control-label" })
-                        </div>
-
-                        <div class="col-md-3">
-                            @Html.EditorFor(model => model.ReasonApprovalModel.OvertimeExtra, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                        </div>
-                        <div class="col-md-3">
-                            @Html.LabelFor(model => model.ReasonApprovalModel.OvertimeExtra, htmlAttributes: new { @class = "control-label" })
-                        </div>
-                        <div class="col-md-3">
-                            @Html.EditorFor(model => model.ReasonApprovalModel.OvertimeExtra, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                        </div>
-                    </div>
-
-                    <hr />
-
-                    <div class="form-group row">
-                        @Html.LabelFor(model => model.ReasonApprovalModel.ReasonName, htmlAttributes: new { @class = "control-label col-md-12" })
-
-                        <div class="col-md-12">
-                            @Html.EditorFor(model => model.ReasonApprovalModel.ReasonName, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        @Html.LabelFor(model => model.ReasonApprovalModel.Remark, htmlAttributes: new { @class = "control-label col-md-12" })
-
-                        <div class="col-md-12">
-                            @Html.EditorFor(model => model.ReasonApprovalModel.Remark, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                        </div>
-                    </div>
-
-                    <hr />
-
-                    <div class="form-group row">
-                        @Html.LabelFor(model => model.ReasonApprovalModel.ApproverComment, htmlAttributes: new { @class = "control-label col-md-12 required" })
-
-                        <div class="col-md-12">
-                            @Html.EditorFor(model => model.ReasonApprovalModel.ApproverComment, new { htmlAttributes = new { @class = "form-control", @id = "txtApproverComment" } })
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-md-12 text-right">
-                            <input id="btnRequestToAmend" type="submit" value="@MyTime.Resource.RequestToAmend" class="btn btn-primary" />
-                            <input id="btnCancel" type="button" value="@MyTime.Resource.Cancel" class="btn btn-warning" />
-                        </div>
-                    </div>
-
-                </div>
 
                 }
 
