--- a/MyTime/Views/User/Index.cshtml
+++ b/MyTime/Views/User/Index.cshtml
@@ -526,7 +526,7 @@
             });
     };
 
-    function ListAttendanceCardProcess(NRIC, UserName) {
+    @*function ListAttendanceCardProcess(NRIC, UserName) {
 
 
         document.getElementById('pid').value = 'list attendance card';
@@ -675,7 +675,7 @@
                 }
             });
 
-        }
+        }*@
 
 
     function SearchDeviceUserProcess() {
