--- a/MyTime/Views/Attendance/Index.cshtml
+++ b/MyTime/Views/Attendance/Index.cshtml
@@ -30,7 +30,7 @@
 
                         <div class="form-group row text-center">
                             <div class="col-md-12">
-                                <div id="divAttendanceCardStatus" style="width: 100%; height:30px; line-height:20px; padding-top:5px; display: block; background-color:white; text-align: center; ">
+                                <div id="divAttendanceCardStatus" style="width: 100%; height:30px; line-height:20px; padding-top:5px; display: block; background-color:white; text-align: center; color:black; ">
                                     <h6>@MyTime.Resource.AttendanceIndividual</h6>
                                 </div>
 
@@ -719,7 +719,7 @@
                 // var iconAttendanceCardStatus = document.getElementById('iconAttendanceCardStatus');
                 // iconAttendanceCardStatus.style = 'color: gold ; font-size: 30px; display:none;';
 
-               $('#divAttendanceCardStatus').css({ "background-color": "white" });
+               $('#divAttendanceCardStatus').css({ "background-color": "white", "color":"black" });
 
 
                 var submissionDueDate = document.getElementById('SubmissionDueDate');
@@ -809,16 +809,16 @@
                                       
                      switch (data['AttendanceCardStatus']) {
                         case  'YL':
-                             $('#divAttendanceCardStatus').css({ "background-color": "gold" });
+                             $('#divAttendanceCardStatus').css({ "background-color": "gold", "color": "black" });
                             break;
                         case  'GN':
-                             $('#divAttendanceCardStatus').css({ "background-color": "green" });
+                             $('#divAttendanceCardStatus').css({ "background-color": "green", "color": "white" });
                             break;
                         case  'RD':
-                             $('#divAttendanceCardStatus').css({ "background-color": "red" });
+                             $('#divAttendanceCardStatus').css({ "background-color": "red", "color": "white"  });
                             break;
                         default:
-                             $('#divAttendanceCardStatus').css({ "background-color": "white" });
+                             $('#divAttendanceCardStatus').css({ "background-color": "white", "color": "black" });
                             break;
                     }
 
