--- a/MyTime/Views/Home/Index.cshtml
+++ b/MyTime/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             </nav>
         </div>
         <div class="col-md-6">
-            <div id="divAttendanceCardStatus" style="width: 100%; height: 50px; line-height: 50px; display: none; background-color: gold; text-align: center; font-size: 10pt;">
+            <div id="divAttendanceCardStatus" style="width: 100%; height: 50px; line-height: 50px; display: none; background-color: gold; text-align: center; font-size: 10pt; color:black;">
                 @Html.Label(" ", htmlAttributes: new { @class = "control-label", @id = "lblAttendanceCardColour"}) 
             </div>
         </div>
@@ -441,7 +441,7 @@
 
             case 'YL':
                 $('#iconAttendanceCardStatus').css({ 'color': 'gold', 'font-size': '40px' });
-                $('#divAttendanceCardStatus').css({ "background-color": "gold" });
+                $('#divAttendanceCardStatus').css({ "background-color": "gold", "color": "black" });
 
                 //$('#lblAttendanceCardColour').text('@MyTime.Resource.Colour_Yellow');
 
@@ -449,21 +449,21 @@
 
             case 'GN':
                 $('#iconAttendanceCardStatus').css({ 'color': 'green', 'font-size': '40px' });
-                $('#divAttendanceCardStatus').css({ "background-color": "green" });
+                $('#divAttendanceCardStatus').css({ "background-color": "green", "color": "white" });
 
                    //$('#lblAttendanceCardColour').text('@MyTime.Resource.Colour_Green');
 
                     break;
             case 'RD':
                 $('#iconAttendanceCardStatus').css({ 'color': 'red', 'font-size': '40px' });
-                $('#divAttendanceCardStatus').css({ "background-color": "red" });
+                $('#divAttendanceCardStatus').css({ "background-color": "red", "color": "white" });
 
                  //$('#lblAttendanceCardColour').text('@MyTime.Resource.Colour_Red');
 
                     break;
             default:
                 $('#iconAttendanceCardStatus').css({ 'color': 'gold', 'font-size': '40px' });
-                $('#divAttendanceCardStatus').css({ "background-color": "gold" });
+                $('#divAttendanceCardStatus').css({ "background-color": "gold", "color": "black" });
 
 
                   //$('#lblAttendanceCardColour').text('@MyTime.Resource.Colour_Yellow');
