--- a/MyTime/Views/AttendanceCardReport/Index.cshtml
+++ b/MyTime/Views/AttendanceCardReport/Index.cshtml
@@ -62,7 +62,7 @@
                                         <span class="pl-1"></span>
                                         <input id="btnReset" type="button" value="@MyTime.Resource.Reset" class="btn btn-warning text-center" style="min-width: 80px;" />
                                         <span class="pl-1"></span>
-                                        <input id="btnPrint" type="button" value="@MyTime.Resource.Print" class="btn btn-info text-black text-center" style="min-width: 80px;" onclick="location.href='@Url.Action("PrintAttendanceReport", "AttendanceReport" )'" />
+                                        <input id="btnPrint" type="button" value="@MyTime.Resource.Print" class="btn btn-info text-black text-center" style="min-width: 80px;" onclick="location.href='@Url.Action("PrintAttendanceCardReport", "AttendanceCardReport" )'" />
                                     </div>
                                 </div>
 
@@ -103,6 +103,7 @@
                                     <th>@MyTime.Resource.UserName</th>
                                     <th>@MyTime.Resource.NRIC</th>
                                     <th>@MyTime.Resource.AttendanceCardStatus</th>
+                                    <th>@MyTime.Resource.TotalAttendanceIssue</th>
                                     <th>@MyTime.Resource.LateInCount</th>
                                     <th>@MyTime.Resource.EarlyOutCount</th>
                                     <th>@MyTime.Resource.LateInEarlyOutCount</th>
@@ -110,7 +111,7 @@
                                     <th>@MyTime.Resource.AbsentCount</th>
                                     <th>@MyTime.Resource.AttendCount</th>
                                     <th>@MyTime.Resource.OnLeaveCount</th>
-                                    <th>@MyTime.Resource.TotalAttendanceIssue</th>
+
 
                                 </tr>
                             </thead>
@@ -264,30 +265,32 @@
                         { "data": "UserName" },
                         { "data": "NRIC" },
                         { "data": "AttendanceCardStatus" },
+                        { "data": "TotalAttendanceIssue" },
                         { "data": "LateInCount" },
                         { "data": "EarlyOutCount" },
                         { "data": "LateInEarlyOutCount" },
                         { "data": "IncompleteCount" },
                         { "data": "AbsentCount" },
                         { "data": "AttendCount" },
-                        { "data": "OnLeaveCount" },
-                        { "data": "TotalAttendanceIssue" }               
+                        { "data": "OnLeaveCount" }
+                                    
                      
                 ],
                     columnDefs: [                          
-                    { targets: 0, className: 'text-center', width: '40px', orderable: true, visible: false },
-                    { targets: 1, className: 'text-left', width: '350px', orderable: true },
+                    { targets: 0, className: 'text-center', width: '40px', orderable: true},
+                    { targets: 1, className: 'text-left', width: '350px', orderable: true, visible: false  },
                     { targets: 2, className: 'text-left', width: '250px', orderable: true },
                     { targets: 3, className: 'text-center', width: '150px', orderable: true },
                     { targets: 4, className: 'text-left', width: '150px', orderable: true, visible: false },
-                    { targets: 5, className: 'text-center', width: '80px', orderable: true },
-                    { targets: 6, className: 'text-center', width: '80px', orderable: true},
-                    { targets: 7, className: 'text-center', width: '80px', orderable: true },
+                    { targets: 5, className: 'text-center', width: '80px', orderable: true, visible: false },
+                    { targets: 6, className: 'text-center', width: '80px', orderable: true },
+                    { targets: 7, className: 'text-center', width: '80px', orderable: true},
                     { targets: 8, className: 'text-center', width: '80px', orderable: true },
                     { targets: 9, className: 'text-center', width: '80px', orderable: true },
-                    { targets: 10, className: 'text-center', width: '80px', orderable: true, visible: false  },
+                    { targets: 10, className: 'text-center', width: '80px', orderable: true },
                     { targets: 11, className: 'text-center', width: '80px', orderable: true, visible: false  },
                     { targets: 12, className: 'text-center', width: '80px', orderable: true, visible: false  }
+              
                    
                 ],
                 order: [[1, 'asc'], [2, 'asc']]
